ui: Fix wrapping of track details popups

--- a/ui/src/assets/track_panel.scss
+++ b/ui/src/assets/track_panel.scss
@@ -242,7 +242,7 @@
 }
 
 .pf-track-details-dropdown {
-  width: 400px;
+  max-width: 400px;
 }
 
 .pf-panel-group {
